--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -148,3 +148,9 @@
 	pages={297-301},
 	url={https://api.semanticscholar.org/CorpusID:121744946}
 }
+@inproceedings{practice,
+	title={Implementing FFTs in Practice},
+	author={Steven G. Johnson and Matteo Frigo},
+	year={2009},
+	url={https://api.semanticscholar.org/CorpusID:12455089}
+}
