--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,11 +1,13 @@
 \documentclass{article}
 \usepackage{pacco}
+\addbibresource{biblio.bib}	
 \begin{document}
 	\title{Bitch Shifting}
 	\author{kotatsu}
 	\date{}
 	\maketitle
 	\tableofcontents
+	
 \input{fft}
 \listofalgorithms
 \printbibliography
