--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -154,3 +154,9 @@
 	year={2009},
 	url={https://api.semanticscholar.org/CorpusID:12455089}
 }
+@inproceedings{worner,
+	title={Fast Fourier Transform Numerical Analysis Seminar},
+	author={Stefan W{\"o}rner},
+	year={2008},
+	url={https://api.semanticscholar.org/CorpusID:201855601}
+}
