--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -160,3 +160,41 @@
 	year={2008},
 	url={https://api.semanticscholar.org/CorpusID:201855601}
 }
+@ARTICLE{rader,
+	author={Rader, C.M.},
+	journal={Proceedings of the IEEE}, 
+	title={Discrete Fourier transforms when the number of data samples is prime}, 
+	year={1968},
+	volume={56},
+	number={6},
+	pages={1107-1108},
+	keywords={Discrete Fourier transforms;Electrons;Circuit noise;Equivalent circuits;Fourier transforms;Discrete transforms;Fast Fourier transforms;Frequency},
+	doi={10.1109/PROC.1968.6477}}
+@ARTICLE{bluestein,
+	author={Bluestein, L.},
+	journal={IEEE Transactions on Audio and Electroacoustics}, 
+	title={A linear filtering approach to the computation of discrete Fourier transform}, 
+	year={1970},
+	volume={18},
+	number={4},
+	pages={451-455},
+	keywords={Maximum likelihood detection;Discrete Fourier transforms;Nonlinear filters;Chirp;Transversal filters;Frequency;Discrete transforms;Filtering;Band pass filters;Laboratories},
+	doi={10.1109/TAU.1970.1162132}}
+@Article{FFTW,
+	author   =  {Frigo, Matteo and Johnson, Steven~G.},
+	title    =  {The Design and Implementation of {FFTW3}},
+	journal  =  {Proceedings of the IEEE},
+	year     =  2005,
+	volume   =  93,
+	number   =  2,
+	pages    =  {216--231},
+	note     =  {Special issue on ``Program Generation, Optimization, and Platform Adaptation''},
+	doi      =  {10.1109/JPROC.2004.840301}
+}
+@article{quantum,
+	title={Efficient Quantum Transforms},
+	author={Peter H{\o}yer},
+	journal={arXiv: Quantum Physics},
+	year={1997},
+	url={https://api.semanticscholar.org/CorpusID:17427654}
+}
