--- a/tex/pacco.sty
+++ b/tex/pacco.sty
@@ -276,7 +276,7 @@
 						}{}
 						
 						\newenvironment{complexity}[1][]{
-							{\par\addvspace{\baselineskip}\noindent\ignorespaces}
+							{\par\noindent\ignorespaces}
 							{\ignorespacesafterend} 
 							\hfill   
 							\stepcounter{algor}
@@ -366,7 +366,7 @@
 									\renewcommand{\labelitemiii}{$\textcolor{RedViolet}{\diamond}$}
 									\renewcommand{\labelitemiv}{$\textcolor{RedViolet}{\ast}$}
 									
-									\newcommand{\enf}[1]{\textcolor{black!80!red}{\textbf{#1}}} %enf sta per enfasi
+									\newcommand{\enf}[1]{\textcolor{black!50!red}{\textbf{#1}}} %enf sta per enfasi
 									\newcommand{\sott}[1]{\setulcolor{black!20!Goldenrod}\ul{#1}}
 									\newcommand{\prob}{\mathbb{P}}
 									\newcommand\independent{\protect\mathpalette{\protect\independenT}{\perp}}
